# melpoi

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  commitlint.config.js  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  docs.yml  dummy_test.yml  release.yml  staging.yml  test.yml
examples/: example.ipynb
examples/dataframe/: DataFrameAnalyzer_sample.ipynb  README.md
examples/sql/: README.md  SqlAnalyzer_sample.ipynb
examples/sql/SQLAnalyzer/: README.md  example.ipynb
examples/sql/SqlAnalyzer/: example.ipynb
melpoi/dataframe/: __init__.py  analyzer.py  exception.py  metadata.py
melpoi/scraping/website-monitor/: README.md
melpoi/sql/: __init__.py  analyzer.py
melpy/scraping/website-monitor/: website_monitor.py
melpy/sql/SQLAnalyzer/: SQLAnalyzer.py  example.ipynb
scraping/website-monitor/: README.md  website_monitor.py
sql/SQLAnalyzer/: README.md  SQLAnalyzer  SQLAnalyzer.py  example.ipynb  example.sql  example1.sql
tests/dataframe/: test_dataframe.py
tests/sql/: test_analyzer.py  test_sql.py
tests/sql/sql_scripts/: test1.sql  test2.sql
