[tool.poetry]
name = "melpoi"
version = "0.2.1"
description = ""
authors = ["Melvin Low <la0bing07148@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
graphviz = "^0.20.1"
ipython = "^8.6.0"
pandas = "^1.5.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
python-semantic-release = "^7.32.2"
pytest = "^7.2.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
branch = "master"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
line_length = 88

[tool.black]
target-version = ["py38", "py39", "py310"]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist

    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
)/'''
